Update with Integer

--- a/force-app/main/default/classes/pipeLineRepoClass.cls
+++ b/force-app/main/default/classes/pipeLineRepoClass.cls
@@ -1,5 +1,6 @@
 public with sharing class pipeLineRepoClass {
     public pipeLineRepoClass() {
+        Integer i = 0;
         System.debug('=====> pipeLineRepoClass');
     }
 }
