--- a/force-app/main/default/classes/pipeLineRepoClass.cls
+++ b/force-app/main/default/classes/pipeLineRepoClass.cls
@@ -2,6 +2,7 @@ public with sharing class pipeLineRepoClass {
     public pipeLineRepoClass() {
         Integer i = 0;
         Integer j = 0;
+        Integer K = 0;
         System.debug('=====> pipeLineRepoClass');
     }
 }
